--- a/mexin/home2.html
+++ b/mexin/home2.html
@@ -5,7 +5,7 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>Home 2 - Mexin</title>
+	<title>Ottawa Home Inspectors</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
