--- a/mexin/about.html
+++ b/mexin/about.html
@@ -6,7 +6,7 @@
 	<!-- Basic Page Needs
 	  ================================================== -->
 	<meta charset="utf-8">
-	<title>About Us - Mexin</title>
+	<title>Ottawa Home Inspectors | About Us </title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<!-- Mobile Specific Metas
@@ -33,7 +33,7 @@
 <body>
 <!-- Primary Page Layout
 	================================================== -->
-<div id="wrap" class="colorskin-0">
+<div id="wrap" class="colorskin-4">
   <div class="top-bar">
     <div class="container">
       <div class="top-links"> <a href="#">Form</a> | <a href="#">Terms</a> | <a href="#">Contact</a></div>
