--- a/mexin/faq.html
+++ b/mexin/faq.html
@@ -154,9 +154,9 @@
 
 <section id="main-content">
 <div class="eleven columns">
-<h3>All questions Lorem ipsum dolor sit amet</h3>	
+<h3>Ottawa Home Inspectors</h3>	
 <br>
-<p>Aenean nisl orci lorem, condiment ultrices consequat eu lorem ipsum dolor Mustache cliche tempor, williamsburg carles vegan helvetica Cosby sweater eu banh mi, qui irure terry richardson ex squid. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
+<p>Here you will find all the questions that are asked most often. If you can't find an answer below please contact us.</p>
 <p><small>Vivamus nec sapien massa, a imperdiet diam</small></p>
 <a href="#" class="magicmore">Discover more about us</a>
 <br class="clear">
