--- a/mexin/home2.html
+++ b/mexin/home2.html
@@ -40,7 +40,7 @@
 <div id="wrap" class="colorskin-0">
 <div class="top-bar">
 <div class="container">
-<div class="top-links"> <a href="#">Form</a> | <a href="#">Terms</a> | <a href="#">Contact</a></div>
+<div class="top-links"> <a href="#">FORM</a> | <a href="#">Terms</a> | <a href="#">Contact</a></div>
 <div class="socailfollow"><a href="#" class="facebook"><i class="icomoon-facebook"></i></a> <a href="#" class="dribble"><i class="icomoon-dribbble"></i></a>  <a href="#" class="vimeo"><i class="icomoon-vimeo"></i></a><a href="#" class="google"><i class="icomoon-google"></i></a> <a href="#" class="twitter"><i class="icomoon-twitter"></i></a></div>
 </div>
 </div>
@@ -54,9 +54,9 @@
 					</form>
 				</div>
 					<ul id="nav">
-				<li class="current"><a href="index.html">Home</a>
+				<li class="current"><a href="index.html">Hello</a>
 						<ul>
-							<li><a href="index.html">Home 1 - Main Page</a></li>
+							<li><a href="index.html">Home 1 - Main Page</a></li> 
 							<li class="current"><a href="home2.html">Home 2 - Full Sections</a></li>
 							<li><a href="home3.html">Home 3 - Parallax Sections</a></li>
 							<li><a href="home4.html">Home 4 - Dark Half</a></li>
@@ -223,9 +223,8 @@
       <div class="nine columns">
         <hr class="vertical-space1">
         <div class="eight columns">
-          <h3><strong>We will show you the way to Success!</strong></h3>
-          <h5 class="magic"> Give us a chance and we will
-            prove our efficiency! We will show you the way to Success!</h5>
+          <h3><strong>Ottawa Home Inspectors</strong></h3>
+          <h5 class="magic"> Work with us to get the best home inspection possible!</h5>
         </div>
         <hr class="vertical-space2">
         <div class="row column omega">
