--- a/mexin/index.html
+++ b/mexin/index.html
@@ -5,7 +5,7 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>Home 1 - Mexin</title>
+	<title>Ottawa Home Inspectors</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -38,7 +38,7 @@
 	<!-- Primary Page Layout
 	================================================== -->
 
-<div id="wrap" class="colorskin-0">
+<div id="wrap" class="colorskin-4">
 <div class="top-bar">
 <div class="container">
 <div class="top-links"> <a href="#">Form</a> | <a href="#">Terms</a> | <a href="#">Contact</a></div>
@@ -72,7 +72,7 @@
 							</li>
 					</ul>
 				</li>
-				<li><a  href="#">Pages</a>
+				<li><a  href="#">About Us</a>
 					<ul>
 						<li><a href="services.html">Services</a></li>
 						<li><a href="about.html">About us</a></li>
@@ -221,8 +221,8 @@
 	<section class="row column">
       <div class="one_third">
         <article class="icon-box3"> <i class="icomoon-cube4"></i><br>
-          <h5><strong>Web Hosting</strong></h5>
-          <p>Innovative design always develops in tandem with innovative technology, and can never be an end in itself. Lorem ipsum dolor</p>
+          <h5><strong>New Home Inspection</strong></h5>
+          <p>We get you living in that new home as soon as possible</p>
         </article>
       </div>
       <div class="one_third">
