worked on customizing site

--- a/mexin/about.html
+++ b/mexin/about.html
@@ -33,16 +33,14 @@
 <body>
 <!-- Primary Page Layout
 	================================================== -->
-<div id="wrap" class="colorskin-4">
+<div id="wrap" class="colorskin-8">
   <div class="top-bar">
     <div class="container">
-      <div class="top-links"> <a href="#">Form</a> | <a href="#">Terms</a> | <a href="#">Contact</a></div>
-      <div class="socailfollow"><a href="#" class="facebook"><i class="icomoon-facebook"></i></a> <a href="#" class="dribble"><i class="icomoon-dribbble"></i></a> <a href="#" class="vimeo"><i class="icomoon-vimeo"></i></a><a href="#" class="google"><i class="icomoon-google"></i></a> <a href="#" class="twitter"><i class="icomoon-twitter"></i></a></div>
     </div>
   </div>
   <header id="header">
     <div  class="container">
-      <div class="four columns logo"><a href="index.html"><img src="images/logo-retina1.png" width="120" id="img-logo" alt="logo"></a></div>
+      <div class="four columns logo"><a href="index.html"><img src="images/logo-homeinspector.png" width="120" id="img-logo" alt="logo"></a></div>
       <nav id="nav-wrap" class="nav-wrap1 twelve columns">
         <div id="search-form">
           <form action="#" method="get">
@@ -50,83 +48,26 @@
           </form>
         </div>
         <ul id="nav">
-          <li><a href="index.html">Home</a>
-            <ul>
-              <li><a href="index.html">Home 1 - Main Page</a></li>
-              <li><a href="home2.html">Home 2 - Full Sections</a></li>
-              <li><a href="home3.html">Home 3 - Parallax Sections</a></li>
-              <li><a href="home4.html">Home 4 - Dark Half</a></li>
-              <li class="submenu"><a href="#">Headers</a>
+          <li class="current"><a href="index.html">Company</a>
+				<ul>
+				    <li><a href="about.html">About Us</a></li>
+				</ul>
+            </li>
+                        
+            <li><a  href="services.html">Services</a>
+				<ul>
+				    <li><a href="services.html">New Home Inspection</a></li>
+				    <li><a href="services.html">Resale Inspection</a></li>
+				    <li><a href="services.html">Our Report</a></li>
+				</ul>
+            </li>
+                        
+            <li><a href="contact.html">Contact Us</a>
                 <ul>
-                  <li><a href="header-fixed.html">Header Fixed</a></li>
-                  <li><a href="header2.html">Header 2</a></li>
-                  <li><a href="header3.html">Header 3</a></li>
-                  <li><a href="header4.html">Header 4</a></li>
-                  <li><a href="header5.html">Header 5</a></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-          <li class="current"><a  href="#">Pages</a>
-            <ul>
-              <li><a href="services.html">Services</a></li>
-              <li class="current"><a href="about.html">About us</a></li>
-						<li><a href="about-extended.html">About us - Extended</a></li>
-						<li><a href="about-me.html">About me</a></li>
-              <li><a href="ourteam.html">Our team</a></li>
-              <li><a href="sidebar-right.html">Right Side-Bar</a></li>
-              <li><a href="sidebar-left.html">Left Side-Bar</a></li>
-              <li><a href="faq.html">FAQ</a></li>
-              <li><a href="contact.html">Contact</a></li>
-              <li><a href="404.html">404 Not Found</a></li>
-            </ul>
-          </li>
-          <li><a href="#">Features</a>
-            <ul>
-              <li class="submenu"><a href="#">Shop</a>
-                <ul>
-                  <li><a href="shop.html">Shop 1</a></li>
-                  <li><a href="shop2.html">Shop 2</a></li>
-                  <li><a href="product-item.html">Product</a></li>
-                </ul>
-              </li>
-			  <li><a href="elements.html">Elements</a></li>
-              <li><a href="icons.html">Icons</a></li>
-              <li><a href="pricing.html">Pricing Tables</a></li>
-              <li><a href="columns.html">Columns</a></li>
-              <li><a href="timeline1.html">Timeline</a></li>
-              <li><a href="left-nav-page.html">Left Navigation</a></li>
-              <li class="submenu"><a href="#">Sub Menu</a>
-                <ul>
-                  <li><a href="#">Menu Item 01</a></li>
-                  <li><a href="#">Menu Item 02</a></li>
-                  <li><a href="#">Menu Item 03</a></li>
-                </ul>
-              </li>
-            </ul>
-          </li>
-          <li><a  href="blog.html">Blog</a>
-            <ul>
-              <li><a href="blog.html">Blog 1</a></li>
-              <li><a href="blog-leftsidebar.html">Blog 1 - Left Sidebar</a></li>
-              <li><a href="blog2.html">Blog 2</a></li>
-              <li><a href="blog2-leftsidebar.html">Blog 2 - Left Sidebar</a></li>
-              <li><a href="blog-bothsidebar.html">Blog - Both Sidebar</a></li>
-              <li><a href="timeline1.html">Blog - Timeline</a></li>
-              <li><a href="blog-single.html">Blog - Single Post</a></li>
-            </ul>
-          </li>
-          <li><a href="portfolio2col.html">work</a>
-            <ul>
-              <li><a href="portfolio2col.html">Portfolio 2 Columns</a></li>
-              <li><a href="portfolio3col.html">Portfolio 3 Columns</a></li>
-              <li><a href="portfolio4col.html">Portfolio 4 Columns</a></li>
-              <li><a href="portfolio-pin.html">Portfolio Pinterest</a></li>
-              <li><a href="timeline2.html">Portfolio Timeline</a></li>
-              <li><a href="portfolio-item.html">Portfolio Item (Single)</a></li>
-            </ul>
-          </li>
-        </ul>
+                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="#">Get An Estimate</a></li>
+                </ul>	
+            </li>
       </nav>
       <!-- /nav-wrap -->
     </div>
@@ -146,55 +87,35 @@
     <hr class="vertical-space1">
     <article class="ten columns">
       <h4 class="subtitle">Who We Are</h4>
-      <p>Raw denim you probably haven't heard of them jean shorts Austin. Etiam ut lacus a dui accumsan accumsan tofu stumptown aliqua, retro synth master cleanse.<br>
-        Asunt in anim uis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in anim id est laborum. Allamco laboris nisi ut aliquip ex ea commodo consequat. Aser velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in anim id est laborum. <br>
-        Malesuada tortor, nec scelerisque lorem mattis. Nunc et rutrum consetetur sadipscing elitr, sed diam nonumy at volutpat. Sed consectetur suscipit lorem nunc.adipiscing elit. Integer commodo tristique odio, quis fringilla ligula aliquet ut. Maecenas sed justo varius velit imperdiet bibendum et rutrum. </p>
+      <p>We are the leading home inspection company in the Ottawa/Gatineau area. We offer both new build home inspections and resale inspections. </p>
     </article>
 	<!-- end Who We Are -->
-    <div class="five columns omega offset-by-one">
-      <h4 class="subtitle">Our Skills</h4>
-      <div class="progress progress-success progress-striped"  data-progress="90">
-        <div class="bar" >HTML 5 - <small>90%</small></div>
-      </div>
-      <div id="progressBar" class="progress progress-success progress-striped"  data-progress="80">
-        <div class="bar" >CSS 3 - <small>80%</small></div>
-      </div>
-      <div class="progress progress-success progress-striped" data-progress="60">
-        <div class="bar" >PHP - <small>60%</small></div>
-      </div>
-      <div class="progress progress-success progress-striped"  data-progress="40">
-        <div class="bar" >mySQL - <small>40%</small></div>
-      </div>
-    </div>
-	<!-- end Our Skills -->
+  
     <hr class="vertical-space1">
     <div class="sixteen columns">
       <h4 class="subtitle">our team</h4>
     </div>
     <div class="one-third column">
-      <figure class="our-team"> <img src="images/our-team01.jpg" alt="">
-        <figcaption><h4><strong>John Smith<br>
-          <small>Project Manager</small></strong></h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit Aenean nisl orci aliqua.adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna..</p>
-        <div class="socailfollow"><a href="#" class="facebook"><i class="icomoon-facebook"></i></a> <a href="#" class="dribble"><i class="icomoon-dribbble"></i></a> <a href="#" class="twitter"><i class="icomoon-twitter"></i></a> <a href="#" class="google"><i class="icomoon-google"></i></a> <a href="#" class="linkedin"><i class="icomoon-linkedin"></i></a></div></figcaption>
+      <figure class="our-team"> <img src="images/about-sarah.jpg" alt="">
+        <figcaption><h4><strong>George Miller<br>
+          <small>Founder/Home Inspector</small></strong></h4>
+        <p>George is the founder and original inspector of Ottawa Home Inspectors. He is a Registered Home Inspector with the Ontario Association of Home Inspectors and a member of the American Society of Home Inspectors. George has received many awards for his work and has successfully created the leading Ottawa home inspection company.</p>
       </figure>
       <!-- end Our Team -->
     </div>
     <div class="one-third column">
-      <figure class="our-team"> <img src="images/our-team02.jpg" alt="">
-        <figcaption><h4><strong>Sarah Kelly<br>
-          <small>Designer</small></strong></h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit Aenean nisl orci aliqua.adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna..</p>
-        <div class="socailfollow"><a href="#" class="facebook"><i class="icomoon-facebook"></i></a> <a href="#" class="dribble"><i class="icomoon-dribbble"></i></a> <a href="#" class="twitter"><i class="icomoon-twitter"></i></a> <a href="#" class="google"><i class="icomoon-google"></i></a> <a href="#" class="linkedin"><i class="icomoon-linkedin"></i></a></div></figcaption>
+      <figure class="our-team"> <img src="images/about-sarah.jpg" alt="">
+        <figcaption><h4><strong>Kelly James<br>
+          <small>Home Inspector</small></strong></h4>
+        <p>Kelly is new to Ottawa Home Inspectors but has been working within the industry for 15 years. She is a Registered Home Inspector with the Ontario Association of Home Inspectors, is a member of the American Society of Home Inspectors, and has received numerous awards for her superior work.</p>
       </figure>
       <!-- end Our Team -->
-    </div>
+     </div>
     <div class="one-third column">
-      <figure class="our-team"> <img src="images/our-team03.jpg" alt="">
-        <figcaption><h4><strong>Frank Miller<br>
-          <small>Developer</small></strong></h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit Aenean nisl orci aliqua.adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna..</p>
-        <div class="socailfollow"><a href="#" class="facebook"><i class="icomoon-facebook"></i></a> <a href="#" class="dribble"><i class="icomoon-dribbble"></i></a> <a href="#" class="twitter"><i class="icomoon-twitter"></i></a> <a href="#" class="google"><i class="icomoon-google"></i></a> <a href="#" class="linkedin"><i class="icomoon-linkedin"></i></a></div></figcaption>
+      <figure class="our-team"> <img src="images/about-sarah.jpg" alt="">
+        <figcaption><h4><strong>Aaron Grant<br>
+          <small>Home Inspector</small></strong></h4>
+        <p>Aaron has been with Ottawa Home Inspectors since 2009 and has 10 years of experience in the industry before that.He is a Registered Home Inspector with the Ontario Association of Home Inspectors and a member of the American Society of Home Inspectors</p>
       </figure>
       <!-- end Our Team -->
     </div>
@@ -204,77 +125,52 @@
       <!-- Testimonial -->
       <div class="testimonial">
         <div class="testimonial-content">
-          <h4><q>Excellent template. One of the best theme I have ever used. Every minor detail has been taken care of. Clean, Modern Design can be used for any type of website.</q> </h4>
+          <h4><q>Ottawa Home Inspectors was extremely thorough with there inspection and were very professional with their work and reports.</q> </h4>
           <div class="testimonial-arrow"></div>
         </div>
-        <div class="testimonial-brand"> <img src="images/man-q1.jpg" alt="">
-          <h5><strong>John Smith</strong><br>
-            <em>Manager at Viona Business</em></h5>
+        <div class="testimonial-brand"> <img src="images/about-sarah.jpg" alt="">
+          <h5><strong>Alain Blaire</strong><br>
+            <em>Home Owner</em></h5>
         </div>
       </div>
-      <!-- Testimonial -->
-    </div>
-    <!-- end-Testimonials -->
-    <hr class="vertical-space2">
-    <!-- Our-Clients- start -->
-    <div class="sixteen columns">
-      <h4 class="subtitle">Our Clients</h4>
-      <ul id="our-clients" class="our-clients">
-        <li><img src="images/clients/logo-01.png" alt=""></li>
-        <li><img src="images/clients/logo-02.png" alt=""></li>
-        <li><img src="images/clients/logo-03.png" alt=""></li>
-        <li><img src="images/clients/logo-06.png" alt=""></li>
-        <li><img src="images/clients/logo-07.png" alt=""></li>
-        <li><img src="images/clients/logo-05.png" alt=""></li>
-        <li><img src="images/clients/logo-04.png" alt=""></li>
-      </ul>
-    </div>
-    <!-- Our-Clients- end -->
     <hr class="vertical-space2">
   </section>
   <!-- container -->
-  <footer id="footer">
-    <section class="container footer-in">
-      <div class="one-third column contact-inf">
+ <footer id="footer" class="litex">
+      <section class="container footer-in">
+	      <div class="one-third column contact-inf">
         <h4 class="subtitle">Contact Information</h4>
         <br />
-        <p><strong>Address: </strong> No.28 - 63739 street lorem ipsum City, Country</p>
-        <p><strong>Phone: </strong> + 1 (234) 567 8901 </p>
-        <p><strong>Fax: </strong> + 1 (234) 567 8901 </p>
-        <p><strong>Email: </strong> support@yoursite.com </p>
-        <h4 class="subtitle">Stay Connected</h4>
-        <div class="socailfollow"><a href="#" class="facebook"><i class="icomoon-facebook"></i></a> <a href="#" class="dribble"><i class="icomoon-dribbble"></i></a> <a href="#" class="pinterest"><i class="icomoon-pinterest-2" aria-hidden="true"></i></a> <a href="#" class="vimeo"><i class="icomoon-vimeo"></i></a><a href="#" class="google"><i class="icomoon-google"></i></a> <a href="#" class="twitter"><i class="icomoon-twitter"></i></a> <a href="#" class="youtube"><i class="icomoon-youtube"></i></a> </div>
+        <p><strong>Address: </strong> 2182 Regency Terrace Ottawa, ON K2C 1H1</p>
+        <p><strong>Phone: </strong> 613-403-4098 </p>
+        <p><strong>Email: </strong> info@ottawahomeinspectors.net</p>
+		<h4 class="subtitle">Stay Connected</h4>
+		        <div class="socailfollow"><a href="#" class="facebook"><i class="icomoon-facebook"></i></a> <a href="#" class="dribble"><i class="icomoon-dribbble"></i></a> <a href="#" class="pinterest"><i class="icomoon-pinterest-2" aria-hidden="true"></i></a> <a href="#" class="vimeo"><i class="icomoon-vimeo"></i></a><a href="#" class="google"><i class="icomoon-google"></i></a> <a href="#" class="twitter"><i class="icomoon-twitter"></i></a> <a href="#" class="youtube"><i class="icomoon-youtube"></i></a> </div>
       </div>
       <!-- end-contact-info /end -->
+
       <div class="one-third column">
         <h4 class="subtitle">latest tweet</h4>
         <br />
-        <div class="lts-tweets"> <i class="icomoon-twitter"></i>
-          <h3><a href="https://twitter.com/webnus">@webnus</a></h3>
-          <h5 id="twitter"></h5>
+        <div class="lts-tweets">
+		<i class="icomoon-twitter"></i>
+		<h3><a href="https://twitter.com/webnus">@webnus</a></h3>
+		<h5 id="twitter"></h5>
         </div>
       </div>
       <!-- tweets  /end -->
-      <div class="one-third column">
-        <h4 class="subtitle">flickr photostream</h4>
-        <br />
-        <div class="flickr-feed">
-          <script type="text/javascript" src="http://www.flickr.com/badge_code.gne?count=12&amp;display=random&amp;size=square&amp;nsid=36587311@N08&amp;raw=1"></script>
-          <div class="clear"></div>
-        </div>
-      </div>
+
       <!-- flickr /end -->
-    </section>
+	   </section>
     <!-- end-footer-in -->
     <section class="footbot">
-      <div class="container">
-        <div class="footer-navi">© 2012. All Rights Reserved. Powered by <a href="http://wordpress.org/">WordPress</a> </div>
-        <!-- footer-navigation /end -->
-        <img src="images/logo-footer-retina.png" width="65" alt=""> </div>
-    </section>
+	<div class="container">
+      <div class="footer-navi">© 2012. All Rights Reserved. Powered by <a href="http://wordpress.org/">WordPress</a>  </div>
+	  <!-- footer-navigation /end -->
+      <img src="images/logo-footer-retina.png" width="65" alt="">	  </div>
+	  </section>
     <!-- end-footbot -->
   </footer>
-  <!-- end-footer -->
   <span id="scroll-top"><a class="scrollup"><i class="icomoon-arrow-up"></i></a></span>
     </div><!-- end-wrap -->
 
