--- a/mexin/services.html
+++ b/mexin/services.html
@@ -5,7 +5,7 @@
 	<!-- Basic Page Needs
   ================================================== -->
 	<meta charset="utf-8">
-	<title>Services - Mexin</title>
+	<title>Ottawa Home Inspector</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -37,16 +37,14 @@
 	<!-- Primary Page Layout
 	================================================== -->
 
-<div id="wrap" class="colorskin-0">
+<div id="wrap" class="colorskin-8">
 <div class="top-bar">
 <div class="container">
-<div class="top-links"> <a href="#">Form</a> | <a href="#">Terms</a> | <a href="#">Contact</a></div>
-<div class="socailfollow"><a href="#" class="facebook"><i class="icomoon-facebook"></i></a> <a href="#" class="dribble"><i class="icomoon-dribbble"></i></a>  <a href="#" class="vimeo"><i class="icomoon-vimeo"></i></a><a href="#" class="google"><i class="icomoon-google"></i></a> <a href="#" class="twitter"><i class="icomoon-twitter"></i></a></div>
 </div>
 </div>
 <header id="header">
 <div  class="container">
-<div class="four columns logo"><a href="index.html"><img src="images/logo-retina1.png" width="120" id="img-logo" alt="logo"></a></div>
+<div class="four columns logo"><a href="index.html"><img src="images/logo-homeinspector.png" width="120" id="img-logo" alt="logo"></a></div>
 <nav id="nav-wrap" class="nav-wrap1 twelve columns">
 		<div id="search-form">
 					<form action="#" method="get">
@@ -54,83 +52,26 @@
 					</form>
 				</div>
 					<ul id="nav">
-				<li><a href="index.html">Home</a>
-						<ul>
-							<li><a href="index.html">Home 1 - Main Page</a></li>
-							<li><a href="home2.html">Home 2 - Full Sections</a></li>
-							<li><a href="home3.html">Home 3 - Parallax Sections</a></li>
-							<li><a href="home4.html">Home 4 - Dark Half</a></li>
-							<li class="submenu"><a href="#">Headers</a>
-								<ul>
-									<li><a href="header-fixed.html">Header Fixed</a></li>
-									<li><a href="header2.html">Header 2</a></li>
-									<li><a href="header3.html">Header 3</a></li>
-									<li><a href="header4.html">Header 4</a></li>
-									<li><a href="header5.html">Header 5</a></li>
-								</ul>
-							</li>
-					</ul>
-				</li>
-				<li class="current"><a  href="#">Pages</a>
-					<ul>
-						<li class="current"><a href="services.html">Services</a></li>
-						<li><a href="about.html">About us</a></li>
-						<li><a href="about-extended.html">About us - Extended</a></li>
-						<li><a href="about-me.html">About me</a></li>
-						<li><a href="ourteam.html">Our team</a></li>
-						<li><a href="sidebar-right.html">Right Side-Bar</a></li>
-						<li><a href="sidebar-left.html">Left Side-Bar</a></li>
-						<li><a href="faq.html">FAQ</a></li>
-						<li><a href="contact.html">Contact</a></li>
-						<li><a href="404.html">404 Not Found</a></li>
-					</ul>
-				</li>
-				<li><a href="#">Features</a>
-            <ul>
-              <li class="submenu"><a href="#">Shop</a>
+  <li class="current"><a href="index.html">Company</a>
+				<ul>
+				    <li><a href="about.html">About Us</a></li>
+				</ul>
+            </li>
+                        
+            <li><a  href="services.html">Services</a>
+				<ul>
+				    <li><a href="services.html">New Home Inspection</a></li>
+				    <li><a href="services.html">Resale Inspection</a></li>
+				    <li><a href="services.html">Our Report</a></li>
+				</ul>
+            </li>
+                        
+            <li><a href="contact.html">Contact Us</a>
                 <ul>
-                  <li><a href="shop.html">Shop 1</a></li>
-                  <li><a href="shop2.html">Shop 2</a></li>
-                  <li><a href="product-item.html">Product</a></li>
-                </ul>
-              </li>
-			  <li><a href="elements.html">Elements</a></li>
-						<li><a href="icons.html">Icons</a></li>
-						<li><a href="pricing.html">Pricing Tables</a></li>
-						<li><a href="columns.html">Columns</a></li>
-						<li><a href="timeline1.html">Timeline</a></li>
-						<li><a href="left-nav-page.html">Left Navigation</a></li>
-						<li class="submenu"><a href="#">Sub Menu</a>
-							<ul>
-							<li><a href="#">Menu Item 01</a></li>
-							<li><a href="#">Menu Item 02</a></li>
-							<li><a href="#">Menu Item 03</a></li>
-							</ul>
-					  </li>
-					</ul>
-				</li>
-				<li><a  href="blog.html">Blog</a>
-					<ul>
-						<li><a href="blog.html">Blog 1</a></li>
-						<li><a href="blog-leftsidebar.html">Blog 1 - Left Sidebar</a></li>
-						<li><a href="blog2.html">Blog 2</a></li>
-						<li><a href="blog2-leftsidebar.html">Blog 2 - Left Sidebar</a></li>
-						<li><a href="blog-bothsidebar.html">Blog - Both Sidebar</a></li>
-						<li><a href="timeline1.html">Blog - Timeline</a></li>
-						<li><a href="blog-single.html">Blog - Single Post</a></li>
-					</ul>
-					</li>
-				<li><a href="portfolio2col.html">work</a>
-				    <ul>
-						<li><a href="portfolio2col.html">Portfolio 2 Columns</a></li>
-						<li><a href="portfolio3col.html">Portfolio 3 Columns</a></li>
-						<li><a href="portfolio4col.html">Portfolio 4 Columns</a></li>
-						<li><a href="portfolio-pin.html">Portfolio Pinterest</a></li>
-						<li><a href="timeline2.html">Portfolio Timeline</a></li>
-						<li><a href="portfolio-item.html">Portfolio Item (Single)</a></li>
-					</ul>
-				</li>
-			</ul>
+                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="#">Get An Estimate</a></li>
+                </ul>	
+            </li>
 	</nav>
 		<!-- /nav-wrap -->
 </div>
@@ -152,20 +93,25 @@
     <div class="sixteen columns">
       <div class="flexslider">
         <ul class="slides">
-          <li> <img src="images/services-slide-pic1.jpg" alt=""> </li>
-          <li> <img src="images/services-slide-pic2.jpg" alt="">
+          <li> <img src="images/house-new-build.jpg" alt="New Home"> 
+               <article class="slide-caption">
+              <h3>New Build Inspection</h3>
+              <p>As you are building your new home it is important to make sure it is safe and up to current codes.</p>
+            </article>
+            </li>
+          <li> <img src="images/house-for-sale.jpg" alt="Home for Sale">
             <article class="slide-caption">
-              <h3>Logical Planning</h3>
-              <p>This is a Slide Caption text example</p>
+              <h3>Resale Inspection</h3>
+              <p>We help you make sure the house you are buying is safe and you aren't going to get any unexpected surprises after you move in.</p>
             </article>
           </li>
-          <li> <img src="images/services-slide-pic3.jpg" alt=""> </li>
+          <li> <img src="images/house-report.jpg" alt="Yellow house"> </li>
         </ul>
       </div>
     </div>
     <hr class="vertical-space">
-    <div class="ten columns"> <small>STRATEGY</small>
-      <h2>To get significant results, you need a clear vision of the context and logical planning.</h2>
+    <div class="ten columns">
+      <h2>We offer home inspection services for both new and resale homes in Ottawa and Gatineau.</h2>
       <p>Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy  vinyl craft beer blog stumptown salvia banksy cred you probably haven't heard of them, vinyl craft beer blog stumptown. Pitchfork sustainable tofu synth chambray.</p>
     </div>
     <div class="five columns omega offset-by-one">
@@ -175,10 +121,6 @@
       <ul class="check">
         <li>Clean and User friendly layouts </li>
         <li>100% responsive layout and retina display ready</li>
-        <li>Great quantity of high end features</li>
-        <li>Well Organized and Great Documentations</li>
-        <li>1200+ Font icons Integration</li>
-        <li>Easy to Customize</li>
       </ul>
     </div>
     <hr class="vertical-space2">
@@ -191,115 +133,26 @@
     <div class="sixteen columns">
 	<!-- Start - Icon Boxes -->
       <div class="one_half">
-        <article class="icon-box icon-colorx"> <i class="icomoon-marker-2"></i>
-          <h4><strong>Web Design</strong></h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit Aenean nisl orci aliqua.adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore in tandem with innovative technology magna..</p>
+       </i>
+          <h4><strong>New Build Inspection</strong></h4>
+          <p>When building a new home it is extremely important to have your home examined for construction-related problems. Typically 20-30 problems with design, workmanship, and design are found and most are unknown to the home owner until the inspection is completed. Ottawa Home Inspectors helps find these problems so they can be fixed before they cause problems in the future.</p>
         </article>
       </div>
       <div class="one_half column-last">
-        <article class="icon-box icon-colorx"> <i class="icomoon-search"></i>
-          <h4><strong>Website Optimization</strong></h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit Aenean nisl orci aliqua.adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore in tandem with innovative technology magna..</p>
+          <h4><strong>Resale Inspection</strong></h4>
+          <p>Before buying a new home it is important to know what you are getting yourself into. Our inspections reveal any issues that the house you are looking at. However, it is important to remember that the inspection cannot reveal everything that could go wrong with the house in the future. For example, finding the current plumbing leak does not mean that there won't be any plumbing issues in the future.</p>
         </article>
       </div>
-      <div class="one_half">
-        <article class="icon-box icon-colorx"> <i class="icomoon-cube4"></i>
-          <h4><strong>Web Hosting</strong></h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit Aenean nisl orci aliqua.adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore in tandem with innovative technology magna..</p>
-        </article>
-      </div>
-      <div class="one_half column-last">
-        <article class="icon-box icon-colorx"> <i class="icomoon-mobile"></i>
-          <h4><strong>Mobile Marketing</strong></h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit Aenean nisl orci aliqua.adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore in tandem with innovative technology magna..</p>
-        </article>
-      </div>
-      <div class="one_half">
-        <article class="icon-box icon-colorx"> <i class="icomoon-movie-2"></i>
-          <h4><strong>Video Marketing</strong></h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit Aenean nisl orci aliqua.adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore in tandem with innovative technology magna..</p>
-        </article>
-      </div>
-      <div class="one_half column-last">
-        <article class="icon-box icon-colorx"> <i class="icomoon-chart"></i>
-          <h4><strong>Analytics</strong></h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit Aenean nisl orci aliqua.adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore in tandem with innovative technology magna..</p>
-        </article>
-      </div>
-    </div>
-	<!-- /end- Icon Boxes -->
-    <hr class="vertical-space3">
-    <div class="sixteen columns">
-      <div class="title">
-        <h4>other services</h4>
-      </div>
-      <hr class="vertical-space1">
-      <ul id="myTab" class="nav nav-tabs">
-        <li><a href="#Service1" data-toggle="tab">Web Design</a></li>
-        <li class="active"><a href="#Service2" data-toggle="tab">Website Optimization</a></li>
-        <li><a href="#Service3" data-toggle="tab">Web Hosting</a></li>
-        <li><a href="#Service4" data-toggle="tab">Mobile Marketing</a></li>
-        <li><a href="#Service5" data-toggle="tab">Video Marketing</a></li>
-        <li><a href="#Service6" data-toggle="tab">Analytics</a></li>
-      </ul>
-      <div id="myTabContent" class="tab-content">
-        <div class="tab-pane" id="Service1">
-          <hr class="vertical-space1">
-          <div class="icon-box"><i class="icomoon-lab"></i>
-            <h5 class="helvetic5">Web Design</h5>
-            <p>Etsy mixtape wayfarers, ethical wes anderson tofu before they sold out mcsweeney's organic lomo retro fanny pack lo-fi farm-to-table readymade. Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy salvia banksy hoodie helvetica. DIY synth PBR banksy irony. Leggings gentrify squid 8-bit cred pitchfork. Williamsburg banh mi whatever gluten-free, carles pitchfork biodiesel fixie etsy retro mlkshk vice blog. Scenester cred you probably haven't heard of them, vinyl craft beer blog stumptown. Pitchfork sustainable tofu synth chambray yr.</p>
-          </div>
-        </div>
-        <div class="tab-pane active" id="Service2">
-          <hr class="vertical-space1">
-          <div class="icon-box"><i class="icomoon-dashboard"></i>
-            <h5 class="helvetic5">Website Optimization</h5>
-            <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
-          </div>
-        </div>
-        <div class="tab-pane" id="Service3">
-          <hr class="vertical-space1">
-          <div class="icon-box"><i class="icomoon-cube4"></i>
-            <h5 class="helvetic5">Web Hosting</h5>
-            <p>Nesciunt tofu stumptown aliqua, retro synth master cleanse. Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi banh mi before they sold out farm-to-table VHS viral locavore cosby sweater.</p>
-          </div>
-        </div>
-        <div class="tab-pane" id="Service4">
-          <hr class="vertical-space1">
-          <div class="icon-box"><i class="icomoon-mobile"></i>
-            <h5 class="helvetic5">Mobile Marketing</h5>
-            <p>Trust fund seitan letterpress, keytar raw denim keffiyeh etsy art party before they sold out master cleanse gluten-free squid scenester freegan cosby sweater. Fanny pack portland seitan DIY, art party locavore wolf cliche high life echo park Austin. Cred vinyl keffiyeh DIY salvia PBR, banh mi before they sold out farm-to-table VHS viral locavore cosby sweater. Lomo wolf viral, mustache readymade thundercats keffiyeh craft beer marfa ethical. Wolf salvia freegan, sartorial keffiyeh echo park vegan.</p>
-          </div>
-        </div>
-        <div class="tab-pane" id="Service5">
-          <hr class="vertical-space1">
-          <div class="icon-box"><i class="icomoon-movie"></i>
-            <h5 class="helvetic5">Video Marketing</h5>
-            <p>Fanny pack portland seitan DIY, art party locavore wolf cliche high life echo park Austin them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse. Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth. Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip quis cardigan american apparel, butcher voluptate nisi qui.</p>
-          </div>
-        </div>
-        <div class="tab-pane " id="Service6">
-          <hr class="vertical-space1">
-          <div class="icon-box"><i class="icomoon-chart"></i>
-            <h5 class="helvetic5">Analytics</h5>
-            <p>Food truck fixie locavore, accusamus mcsweeney's marfa nulla single-origin coffee squid. Exercitation +1 labore velit, blog sartorial PBR leggings next level wes anderson artisan four loko farm-to-table craft beer twee. Qui photo booth letterpress, commodo enim craft beer mlkshk aliquip jean shorts ullamco ad vinyl cillum PBR. Homo nostrud organic, assumenda labore aesthetic magna delectus mollit. Keytar helvetica VHS salvia yr, vero magna velit sapiente labore stumptown. Vegan fanny pack odio cillum wes anderson 8-bit, sustainable jean shorts beard ut DIY ethical culpa terry richardson biodiesel. Art party scenester stumptown, tumblr butcher vero sint qui sapiente accusamus tattooed echo park.</p>
-          </div>
-        </div>
-      </div>
-      <!-- end -->
-    </div>
-    <hr class="vertical-space3">
+    <hr class="vertical-space3"> 
   </section><!-- container -->
-
-<footer id="footer">
-    <section class="container footer-in">
+<footer id="footer" class="litex">
+      <section class="container footer-in">
 	      <div class="one-third column contact-inf">
         <h4 class="subtitle">Contact Information</h4>
         <br />
-        <p><strong>Address: </strong> No.28 - 63739 street lorem ipsum City, Country</p>
-        <p><strong>Phone: </strong> + 1 (234) 567 8901 </p>
-        <p><strong>Fax: </strong> + 1 (234) 567 8901 </p>
-        <p><strong>Email: </strong> support@yoursite.com </p>
+        <p><strong>Address: </strong> 2182 Regency Terrace Ottawa ON CANADA K2C 1H1</p>
+        <p><strong>Phone: </strong> 613-408-4093 </p>
+        <p><strong>Email: </strong> info@ottawahomeinspectors.net </p>
 		<h4 class="subtitle">Stay Connected</h4>
 		        <div class="socailfollow"><a href="#" class="facebook"><i class="icomoon-facebook"></i></a> <a href="#" class="dribble"><i class="icomoon-dribbble"></i></a> <a href="#" class="pinterest"><i class="icomoon-pinterest-2" aria-hidden="true"></i></a> <a href="#" class="vimeo"><i class="icomoon-vimeo"></i></a><a href="#" class="google"><i class="icomoon-google"></i></a> <a href="#" class="twitter"><i class="icomoon-twitter"></i></a> <a href="#" class="youtube"><i class="icomoon-youtube"></i></a> </div>
       </div>
@@ -315,28 +168,21 @@
         </div>
       </div>
       <!-- tweets  /end -->
-	  
-	  <div class="one-third column">
-        <h4 class="subtitle">flickr photostream</h4>
-        <br />
-        <div class="flickr-feed">
-          <script type="text/javascript" src="http://www.flickr.com/badge_code.gne?count=12&amp;display=random&amp;size=square&amp;nsid=36587311@N08&amp;raw=1"></script>
-          <div class="clear"></div>
-        </div>
-      </div>
-      <!-- flickr /end -->    </section>
+
+      <!-- flickr /end -->
+	   </section>
     <!-- end-footer-in -->
     <section class="footbot">
 	<div class="container">
       <div class="footer-navi">© 2012. All Rights Reserved. Powered by <a href="http://wordpress.org/">WordPress</a>  </div>
 	  <!-- footer-navigation /end -->
-      <img src="images/logo-footer-retina.png" width="65" alt="">	  </div> 
-    </section>
+      <img src="images/logo-footer-retina.png" width="65" alt="">	  </div>
+	  </section>
     <!-- end-footbot -->
   </footer>
 <!-- end-footer -->
 <span id="scroll-top"><a class="scrollup"><i class="icomoon-arrow-up"></i></a></span>
- </div><!-- end-wrap -->
+</div><!-- end-wrap -->
 
 
 <!-- End Document
