--- a/mexin/index.html
+++ b/mexin/index.html
@@ -28,7 +28,7 @@
 
 	<!-- Favicons
   ================================================== -->
-	<link rel="shortcut icon" href="images/favicon.ico">
+	<link rel="shortcut icon" href="images/favicon_house.ico">
 
     </head>
 <body>
@@ -38,6 +38,7 @@
 
 <div id="wrap" class="colorskin-8">
 <div class="homedark">
+<div class="top-bar"></div>    
 <header id="header">
 <div  class="container">
 <div class="four columns logo"><a href="index.html"><img src="images/logo-homeinspector.png" width="120" id="img-logo" alt="logo"></a></div>
@@ -69,6 +70,7 @@
     </section>
 </div>
 <!-- end-homedark -->
+    
 <section class="container home-content" >
     <hr class="vertical-space2">
 	<!-- Start Content -->
