wrote an article

--- a/mexin/about.html
+++ b/mexin/about.html
@@ -28,7 +28,7 @@
 
 <!-- Favicons
   ================================================== -->
-<link rel="shortcut icon" href="images/favicon.ico">
+<link rel="shortcut icon" href="images/favicon_house.ico">
 </head>
 <body>
 <!-- Primary Page Layout
@@ -56,8 +56,8 @@
                         
             <li><a  href="services.html">Services</a>
 				<ul>
-				    <li><a href="services.html">New Home Inspection</a></li>
-				    <li><a href="services.html">Resale Inspection</a></li>
+				    <li><a href="newbuild.html">New Home Inspection</a></li>
+				    <li><a href="resale.html">Resale Inspection</a></li>
 				    <li><a href="services.html">Our Report</a></li>
 				</ul>
             </li>
