--- a/mexin/index.html
+++ b/mexin/index.html
@@ -47,8 +47,8 @@
 				                        
             <li><a  href="services.html">Services</a>
 				<ul>
-				    <li><a href="services.html">New Home Inspection</a></li>
-				    <li><a href="services.html">Resale Inspection</a></li>
+				    <li><a href="newbuild.html">New Home Inspection</a></li>
+				    <li><a href="resale.html">Resale Inspection</a></li>
 				    <li><a href="services.html">Our Report</a></li>
 				</ul>
             </li>
