--- a/mexin/resale.html
+++ b/mexin/resale.html
@@ -51,7 +51,7 @@
             <li><a  href="services.html">Services</a>
 				<ul>
 				    <li><a href="newbuild.html">New Home Inspection</a></li>
-				    <li><a href="resale.html">Resale Inspection</a></li>
+				    <li><a href="resale.html">Pre-purchase Inspection</a></li>
 				    <li><a href="services.html">Our Report</a></li>
 				</ul>
             </li>
@@ -70,7 +70,7 @@
 <!-- end-header -->
 <section id="headline">
     <div class="container">
-      <h3>Services</h3>
+      <h3>Pre-Purchase Inspection</h3>
     </div>
   </section>
 <section class="container" >
@@ -81,38 +81,28 @@
     </div>
     <hr class="vertical-space">
     <div class="ten columns">
-      <h2>We offer home inspection services for both new and resale homes in Ottawa and Gatineau.</h2>
-      <p>Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy  vinyl craft beer blog stumptown salvia banksy cred you probably haven't heard of them, vinyl craft beer blog stumptown. Pitchfork sustainable tofu synth chambray.</p>
+      <h2>When buying a new home it is important to know what you are getting yourself into before you sign the papers.</h2>
+      <p>The goal of a home inspection is to objectively and visually review all of the systems, structures, and components of the house you are purchasing. The inspection is meant to determine if these systems, structures, and components are performing the basic functions they are intended to perform. Because the inspection is review the basic function of a component of the house it cannot guarantee that a problem will not arise in the future. </p>
+        <p>Typically a home inspection takes between one to three hours to complete. Prospective home owners are encouraged to accompany the inspector as the inspection is completed. This will allow the home owner to ask question that will help them understand the elements of the house and how to take care of them in the future.</p>
+        <p>A typical home inspection starts with the exterior of the house. All aspects fo the roof, including the shingles, chimney, soffit, fascia, ventilation systems, and the electrical service entrance, are inspected thoroughly. Next, the windows, doors, masonry, decks, walkways, stairs, and drainage systems are inspected thoroughly inspected. Some inspection services use thermal imaging to try and detect any hidden problems.</p>
+        <p>After the external inspection is completed the interior is examined starting in the basement and working towards the attic. The plumbing, heating, cooling, and electrical systems are all examined. Interior finishes, accessories like fireplaces and radiators, insulation, and ventilation are all reviewed to finialize the inspection. </p>
+        <p>When the inspection is completed the prospective home owner will receive a detailed report within 48 hours of the inspection being completed. The report will thoroughly outline the findings of the inspection as well as the pictures that were taken throughout the process.</p>
     </div>
     <div class="five columns omega offset-by-one">
       <div class="title">
-        <h4>Why Choose us?</h4>
+        <h4>What Will Be Inspected</h4>
       </div>
       <ul class="check">
-        <li>Clean and User friendly layouts </li>
-        <li>100% responsive layout and retina display ready</li>
+        <li>Roof: structure, ventilations,chimney and covers </li>
+        <li>Exterior: windows, masonry, decks, walkways, stairs and drainage</li>
+        <li>Structure: foundation and other visual components</li> 
+        <li>Systems: heating, cooling, plumbing, electrical and their components</li> 
+        <li>Insulation and Ventilation</li>
+        <li>Interior elements</li>
+        <li>Garage</li>  
       </ul>
     </div>
     <hr class="vertical-space2">
-    <div class="sixteen columns">
-      <div class="title">
-        <h4>core services</h4>
-      </div>
-    </div>
-    <hr class="vertical-space1">
-    <div class="sixteen columns">
-	<!-- Start - Icon Boxes -->
-      <div class="one_half">
-       </i>
-          <h4><strong>New Build Inspection</strong></h4>
-          <p>When building a new home it is extremely important to have your home examined for construction-related problems. Typically 20-30 problems with design, workmanship, and design are found and most are unknown to the home owner until the inspection is completed. Ottawa Home Inspectors helps find these problems so they can be fixed before they cause problems in the future.</p>
-        </article>
-      </div>
-      <div class="one_half column-last">
-          <h4><strong>Resale Inspection</strong></h4>
-          <p>Before buying a new home it is important to know what you are getting yourself into. Our inspections reveal any issues that the house you are looking at. However, it is important to remember that the inspection cannot reveal everything that could go wrong with the house in the future. For example, finding the current plumbing leak does not mean that there won't be any plumbing issues in the future.</p>
-        </article>
-      </div>
     <hr class="vertical-space3"> 
   </section><!-- container -->
 <footer id="footer" class="litex">
