worked on article and other customizing

--- a/mexin/newbuild.html
+++ b/mexin/newbuild.html
@@ -86,11 +86,16 @@
     </div>
     <div class="five columns omega offset-by-one">
       <div class="title">
-        <h4>Key Aspects</h4>
+        <h4>What Will Be Inspected</h4>
       </div>
       <ul class="check">
-        <li>Clean and User friendly layouts </li>
-        <li>100% responsive layout and retina display ready</li>
+         <li>Roof: structure, ventilations,chimney and covers </li>
+        <li>Exterior: windows, masonry, decks, walkways, stairs and drainage</li>
+        <li>Structure: foundation and other visual components</li> 
+        <li>Systems: heating, cooling, plumbing, electrical and their components</li> 
+        <li>Insulation and Ventilation</li>
+        <li>Interior elements</li>
+        <li>Garage</li>
       </ul>
     </div>
       
