--- a/mexin/services.html
+++ b/mexin/services.html
@@ -6,9 +6,6 @@
   ================================================== -->
 	<meta charset="utf-8">
 	<title>Ottawa Home Inspector</title>
-	<meta name="description" content="">
-	<meta name="author" content="">
-
 	<!-- Mobile Specific Metas
   ================================================== -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -51,7 +48,7 @@
             <li><a  href="services.html">Services</a>
 				<ul>
 				    <li><a href="newbuild.html">New Home Inspection</a></li>
-				    <li><a href="resale.html">Resale Inspection</a></li>
+				    <li><a href="resale.html">Pre-Purchase Inspection</a></li>
 				    <li><a href="services.html">Our Report</a></li>
 				</ul>
             </li>
@@ -70,7 +67,7 @@
 <!-- end-header -->
 <section id="headline">
     <div class="container">
-      <h3>Services</h3>
+      <h3>Why Do I Need an Inspection?</h3>
     </div>
   </section>
 <section class="container" >
@@ -86,11 +83,16 @@
     </div>
     <div class="five columns omega offset-by-one">
       <div class="title">
-        <h4>Why Choose us?</h4>
+        <h4>What Will Be Inspected?</h4>
       </div>
       <ul class="check">
-        <li>Clean and User friendly layouts </li>
-        <li>100% responsive layout and retina display ready</li>
+        <li>Roof: structure, ventilations,chimney and covers </li>
+        <li>Exterior: windows, masonry, decks, walkways, stairs and drainage</li>
+        <li>Structure: foundation and other visual components</li> 
+        <li>Systems: heating, cooling, plumbing, electrical and their components</li> 
+        <li>Insulation and Ventilation</li>
+        <li>Interior elements</li>
+        <li>Garage</li>
       </ul>
     </div>
     <hr class="vertical-space2">
