--- a/mexin/resale.html
+++ b/mexin/resale.html
@@ -81,12 +81,12 @@
     </div>
     <hr class="vertical-space">
     <div class="ten columns">
-      <h2>When buying a new home it is important to know what you are getting yourself into before you sign the papers.</h2>
+      <h2>When buying a new home it is important to understand your home and any problems that it could have before you sign the papers.</h2>
       <p>The goal of a home inspection is to objectively and visually review all of the systems, structures, and components of the house you are purchasing. The inspection is meant to determine if these systems, structures, and components are performing the basic functions they are intended to perform. Because the inspection is review the basic function of a component of the house it cannot guarantee that a problem will not arise in the future. </p>
         <p>Typically a home inspection takes between one to three hours to complete. Prospective home owners are encouraged to accompany the inspector as the inspection is completed. This will allow the home owner to ask question that will help them understand the elements of the house and how to take care of them in the future.</p>
         <p>A typical home inspection starts with the exterior of the house. All aspects fo the roof, including the shingles, chimney, soffit, fascia, ventilation systems, and the electrical service entrance, are inspected thoroughly. Next, the windows, doors, masonry, decks, walkways, stairs, and drainage systems are inspected thoroughly inspected. Some inspection services use thermal imaging to try and detect any hidden problems.</p>
         <p>After the external inspection is completed the interior is examined starting in the basement and working towards the attic. The plumbing, heating, cooling, and electrical systems are all examined. Interior finishes, accessories like fireplaces and radiators, insulation, and ventilation are all reviewed to finialize the inspection. </p>
-        <p>When the inspection is completed the prospective home owner will receive a detailed report within 48 hours of the inspection being completed. The report will thoroughly outline the findings of the inspection as well as the pictures that were taken throughout the process.</p>
+        <p>When the inspection is completed the prospective home owner will receive a detailed report within 48 hours of the inspection being completed. The report will thoroughly outline the findings of the inspection as well as the pictures that were taken throughout the process.Most inspection services are available by phone after the inspection to answer questions or for further information about the process. It is important to rememeber that a home inspection is a visual review of the components of a house and therefore it is not realistic to believe that the inspector will discover every problem because there may not be visual clues to every problem.</p>
     </div>
     <div class="five columns omega offset-by-one">
       <div class="title">
