writing second article

--- a/mexin/newbuild.html
+++ b/mexin/newbuild.html
@@ -54,8 +54,7 @@
 				    <li><a href="resale.html">Resale Inspection</a></li>
 				    <li><a href="services.html">Our Report</a></li>
 				</ul>
-            </li>
-                        
+            </li>            
             <li><a href="contact.html">Get An Estimate</a>
             </li>
 	</nav>
@@ -81,8 +80,8 @@
     </div>
     <hr class="vertical-space">
     <div class="ten columns">
-      <h2>We offer home inspection services for both new and resale homes in Ottawa and Gatineau.</h2>
-      <p>Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy  vinyl craft beer blog stumptown salvia banksy cred you probably haven't heard of them, vinyl craft beer blog stumptown. Pitchfork sustainable tofu synth chambray.</p>
+      <h2>When building a new home it is important to make sure your home is safe and avoid future problems and expenses.</h2>
+      <p></p>
     </div>
     <div class="five columns omega offset-by-one">
       <div class="title">
