--- a/mexin/services.html
+++ b/mexin/services.html
@@ -78,8 +78,9 @@
     </div>
     <hr class="vertical-space">
     <div class="ten columns">
-      <h2>We offer home inspection services for both new and resale homes in Ottawa and Gatineau.</h2>
-      <p>Messenger bag gentrify pitchfork tattooed craft beer, iphone skateboard locavore carles etsy  vinyl craft beer blog stumptown salvia banksy cred you probably haven't heard of them, vinyl craft beer blog stumptown. Pitchfork sustainable tofu synth chambray.</p>
+      <h2>We will find the best home inspection service for you in Ottawa, Orleans, Barrhaven, Kanata or Sttitsville.</h2>
+      <p>Building or buying a new home is one of the biggest investments that you will make in your lifetime. It is very important to understand the ins and outs of your new home so that you can make informed decisions regarding your new home.</p>
+        <p>Getting your home inspected will help uncover any deficiancies or problems in your house.</p>
     </div>
     <div class="five columns omega offset-by-one">
       <div class="title">
@@ -96,25 +97,8 @@
       </ul>
     </div>
     <hr class="vertical-space2">
-    <div class="sixteen columns">
-      <div class="title">
-        <h4>core services</h4>
-      </div>
-    </div>
-    <hr class="vertical-space1">
-    <div class="sixteen columns">
 	<!-- Start - Icon Boxes -->
       <div class="one_half">
-       </i>
-          <h4><strong>New Build Inspection</strong></h4>
-          <p>When building a new home it is extremely important to have your home examined for construction-related problems. Typically 20-30 problems with design, workmanship, and design are found and most are unknown to the home owner until the inspection is completed. Ottawa Home Inspectors helps find these problems so they can be fixed before they cause problems in the future.</p>
-        </article>
-      </div>
-      <div class="one_half column-last">
-          <h4><strong>Resale Inspection</strong></h4>
-          <p>Before buying a new home it is important to know what you are getting yourself into. Our inspections reveal any issues that the house you are looking at. However, it is important to remember that the inspection cannot reveal everything that could go wrong with the house in the future. For example, finding the current plumbing leak does not mean that there won't be any plumbing issues in the future.</p>
-        </article>
-      </div>
     <hr class="vertical-space3"> 
   </section><!-- container -->
 <footer id="footer" class="litex">
