wrote article, re-arranged home page

--- a/mexin/newbuild.html
+++ b/mexin/newbuild.html
@@ -52,7 +52,7 @@
 				<ul>
 				    <li><a href="newbuild.html">New Home Inspection</a></li>
 				    <li><a href="resale.html">Resale Inspection</a></li>
-				    <li><a href="services.html">Our Report</a></li>
+				    <li><a href="services.html">Why An Inspection?</a></li>
 				</ul>
             </li>            
             <li><a href="contact.html">Get An Estimate</a>
@@ -81,7 +81,9 @@
     <hr class="vertical-space">
     <div class="ten columns">
       <h2>When building a new home it is important to make sure your home is safe and avoid future problems and expenses.</h2>
-      <p></p>
+      <p>Inspections are mandatory for all homes that are being newly built. Before building can begin an inspection must review and approve the plans to ensure they follow the Ontario Building Code. The inspector will review the building at various stages of the build including before excavation, underground plumbing, when the foundation is laid, plumbing rough in, framing, when insulation is installed, a final plumbing test, before they can get an occupancy permit, and one final inspection before permanent occupancy can be granted. Hiring an inspector outside of this mandatory inspection is important to make sure the construction is held to a standard of excellence. </p>
+        <p>Getting your new home inspected will identify any deficiencies in the materials or workmanship. These deficiencies are covered under the Ontario New Home Warranty Program for one year. The inspection will also highlight any health or safety concerns that need to be addressed immediately. After the inspection any problems found can be prioritized and a plan for completing the repairs can be created.</p>
+        <p>It is important to get your new home inspected as to avoid any unnecessary and unexpected costs in the future. Identifying the deficiencies before they become problems will not only save you a lot of money but will give you peace of mind that your family is safe. </p>
     </div>
     <div class="five columns omega offset-by-one">
       <div class="title">
