--- a/mexin/resale.html
+++ b/mexin/resale.html
@@ -52,7 +52,7 @@
 				<ul>
 				    <li><a href="newbuild.html">New Home Inspection</a></li>
 				    <li><a href="resale.html">Pre-purchase Inspection</a></li>
-				    <li><a href="services.html">Our Report</a></li>
+				    <li><a href="services.html">Why An Inspection?</a></li>
 				</ul>
             </li>                   
             <li><a href="contact.html">Get An Estimate</a>
