fixed html errors

--- a/mexin/index.html
+++ b/mexin/index.html
@@ -57,6 +57,7 @@
             </li>
         </ul>                
 	</nav>
+    </div>
 </header>
 <!-- end-header -->
 <section class="container" >
@@ -65,7 +66,7 @@
         <h1>Ottawa Home Inspectors</h1>
         <h4><strong>Connecting you with the best home inspection in the city. We will find the home inspector that is right for you whether you live in Ottawa, Nepean, Kanata, Stittsville, or Orleans. </strong></h4>
           <a href="contact.html">
-          <input name="Estimate" type="button" class="sendbtn" value="Get a Free Estimate" id="btnSend"/>
+          <input name="Estimate" type="button" class="sendbtn" value="Get a Free Estimate" id="btnSend">
               </a>
       </div>
     </section>
