--- a/mexin/contact.html
+++ b/mexin/contact.html
@@ -43,7 +43,7 @@
 </div>
 <header id="header">
 <div  class="container">
-<div class="four columns logo"><a href="index.html"><img src="images/logo-homeinspector.png" width="120" id="img-logo" alt="logo"></a></div>
+<div class="four columns logo"><a href="index.html"><img src="images/logo.png" width="175" id="img-logo" alt="logo"></a></div>
 <nav id="nav-wrap" class="nav-wrap1 twelve columns">
 
 					<ul id="nav">
@@ -60,11 +60,6 @@
 	</nav>
 		<!-- /nav-wrap -->
 </div>
-		<div id="search-form2">
-					<form action="#" method="get">
-						<input type="text" class="search-text-box2">
-					</form>
-				</div>
 </header>
 <!-- end-header -->
 
