--- a/mexin/newbuild.html
+++ b/mexin/newbuild.html
@@ -44,7 +44,7 @@
 </div>
 <header id="header">
 <div  class="container">
-<div class="four columns logo"><a href="index.html"><img src="images/logo-homeinspector.png" width="120" id="img-logo" alt="logo"></a></div>
+<div class="four columns logo"><a href="index.html"><img src="images/logo.png" width="175" id="img-logo" alt="logo"></a></div>
 <nav id="nav-wrap" class="nav-wrap1 twelve columns">
 
 					<ul id="nav">     
@@ -81,8 +81,8 @@
     <hr class="vertical-space">
     <div class="ten columns">
       <h2>When building a new home it is important to make sure your home is safe and avoid future problems and expenses.</h2>
-      <p>Inspections are mandatory for all homes that are being newly built. Before building can begin an inspection must review and approve the plans to ensure they follow the Ontario Building Code. The inspector will review the building at various stages of the build including before excavation, underground plumbing, when the foundation is laid, plumbing rough in, framing, when insulation is installed, a final plumbing test, before they can get an occupancy permit, and one final inspection before permanent occupancy can be granted. Hiring an inspector outside of this mandatory inspection is important to make sure the construction is held to a standard of excellence. </p>
-        <p>Getting your new home inspected will identify any deficiencies in the materials or workmanship. These deficiencies are covered under the Ontario New Home Warranty Program for one year. The inspection will also highlight any health or safety concerns that need to be addressed immediately. After the inspection any problems found can be prioritized and a plan for completing the repairs can be created.</p>
+      <p>Inspections are mandatory for all homes being built in Ontario. Before building can begin an inspector must review and approve the plans to ensure they follow the Ontario Building Code. The inspector will review the building at various stages of the build to ensure that the home is safe and suitabe for occupancy. Inspections are conducted before any construction has started, at all stages of installing the plumbing systems and after the foundation has been laid. They will also be conducted after the framing is completed, when the house has been insulated, and one final plumbing test when all the appliances have been installed. Finally, a complete inspection of the entire house will be made before an occupancy permit can be granted. This inspection process is mandatory for all new homes but it does not always uncover all deficiencies in the house. Hiring a independent inspector, outside of this mandatory inspection process, is an important step in making sure your home is safe for you and your family. </p>
+        <p>Getting your new home inspected by an independent inspector will help to identify any deficiencies in materials or workmanship.The inspection will also highlight any health or safety concerns that need to be addressed immediately. Any deficiencies discovered during the inspection are covered under the Ontario New Home Warranty Program for one year after the home has been completed. With the limited time to have repairs covered under warranty it is crucial to have your home inspected independently as soon as the build is complete. The inspector can then help you prepare a plan of how to prioritize and amend any deficiencies found. </p>
         <p>It is important to get your new home inspected as to avoid any unnecessary and unexpected costs in the future. Identifying the deficiencies before they become problems will not only save you a lot of money but will give you peace of mind that your family is safe. </p>
     </div>
     <div class="five columns omega offset-by-one">
