--- a/mexin/index.html
+++ b/mexin/index.html
@@ -41,7 +41,7 @@
 <div class="top-bar"></div>    
 <header id="header">
 <div  class="container">
-<div class="four columns logo"><a href="index.html"><img src="images/logo-homeinspector.png" width="120" id="img-logo" alt="logo"></a></div>
+<div class="four columns logo"><a href="index.html"><img src="images/logo.png" width="175" id="img-logo" alt="logo"></a></div>
 <nav id="nav-wrap" class="nav-wrap1 twelve columns">
 					<ul id="nav">
 				                         
