proofed more articles

--- a/mexin/services.html
+++ b/mexin/services.html
@@ -79,9 +79,9 @@
     <hr class="vertical-space">
     <div class="ten columns">
       <h2>We will find the best home inspection service for you in Ottawa, Orleans, Barrhaven, Kanata or Sttitsville.</h2>
-      <p>Building or buying a new home is one of the biggest investments that you will make in your lifetime. It is very important to understand the ins and outs of your new home so that you can make informed decisions regarding your new home.</p>
+      <p>Building or buying a new home is one of the biggest investments that you will make in your lifetime. It is very important to understand the ins and outs of your new home so that you can make informed decisions regarding your investment.</p>
         <p>Getting your home inspected will help uncover any deficiancies or problems in your house. An inspector will visually examine your homes exterior, interior, and all systems of your house including heating, cooling, electrical, and plumbing. Any issues that are found can help make informed decision to either rectify the situation or to move on to another house. </p>
-        <p>When building a new home it is important to get your home inspected before it is completed. An inspection at this stage will reveal any problems that need to be fixed by the construction company before the project is completed. It could also potentially save a lot of problems and money in the future.</p>
+        <p>When building a new home it is important to get your home inspected before it is completed. An inspection at this stage will reveal any problems that need to be fixed and are still covered under the Ontario New Home Warranty Program. It could also potentially save a lot of problems and money in the future.</p>
     </div>
     <div class="five columns omega offset-by-one">
       <div class="title">
